Trying fix z-index in fc-daygrid-event

--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -53,6 +53,10 @@
     overflow: hidden;
   }
 
+  .fc-daygrid-event {
+    z-index: inherit;
+  }
+
 
   .calendar-event {
     position: relative;
